some layout issues in the navbar

--- a/tola/static/css/app.css
+++ b/tola/static/css/app.css
@@ -957,10 +957,15 @@ used on collected data table in IPTT */
 }
 
 /* Branding */
+.navbar-brand-wrapper { /* BS has a navbar-brand class already :-( */
+    display: flex;
+    align-items: center;
+}
 .navbar-tola {
     padding: 0;
 }
 .navbar-tola--container {
+    align-items: flex-start !important;
     padding-left: 0;
 }
 .navbar-brand--mc {
